--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-content: '&copy; Stackbit-Libris. All rights reserved.'
+content: '&copy; Alessandro Cipriani | <a href="https://magiaslab.com">Magiaslab.com</a>'
 links:
   - text: Made with Stackbit
     url: 'https://www.stackbit.com'
