--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 content: '&copy; Alessandro Cipriani | <a href="https://magiaslab.com">Magiaslab.com</a>'
 links:
-  - text: Made with Stackbit
+  - text: Made whit <i class="fas fa-heart"></i> by Magiaslab
     url: 'https://www.stackbit.com'
     new_window: true
 has_social: true
