--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-content: '&copy; Alessandro Cipriani | 
+content: '&copy; Alessandro Cipriani
 links:
   - text: Made by Magiaslab
     url: 'https://www.magiaslab.com'
