--- a/_data/doc_sections.yml
+++ b/_data/doc_sections.yml
@@ -3,7 +3,7 @@ sections:
   - Introduzione
   - Alunni
   - ui-components
-  - manage-content
+  - Suggerisci Materiali
   - tools
   - faq
-  - community
+  - Supporto
