--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,6 +1,6 @@
 main:
-  - identifier: layouts
-    title: Sample Layouts
+  - identifier: 
+    title: 
     url: '#'
     weight: 5
   - identifier: 
